Renamed the demo web app

--- a/scalajs_web_demo/index.html
+++ b/scalajs_web_demo/index.html
@@ -63,7 +63,7 @@
 <!--all js dependencies-->
 <script type="text/javascript" src="assets/mainpage-bundle.js"></script>
 <!-- Include Scala.js compiled code -->
-<script type="text/javascript" src="assets/scalajs_web-opt.js"></script>
+<script type="text/javascript" src="assets/scalajs_web_demo-opt.js"></script>
 <!-- Run JSApp -->
 <script>sri.templates.web.WebApp().main()</script>
 </body>
