Renamed demo web classes

--- a/scalajs_web_demo/index.html
+++ b/scalajs_web_demo/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Sri web template</title>
+    <title>Sputter web demo</title>
     <style>
         html {
             font-family:  sans-serif;
@@ -65,6 +65,6 @@
 <!-- Include Scala.js compiled code -->
 <script type="text/javascript" src="assets/scalajs_web_demo-opt.js"></script>
 <!-- Run JSApp -->
-<script>sri.templates.web.WebApp().main()</script>
+<script>sputter.demo.web.WebApp().main()</script>
 </body>
 </html>
